fixed bar menu z-index

--- a/css/styles.css
+++ b/css/styles.css
@@ -99,7 +99,7 @@ header.active {
   top:10px;
   color:#3498db;
   font-size:1.5em;
-  z-index:20;
+  z-index:30;
   padding:0 7px;
   border-radius:4px;
   background:#fff;
